fixed login screen looking broken in firefox

--- a/client/src/styles/LogInForm.css
+++ b/client/src/styles/LogInForm.css
@@ -20,6 +20,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 80%;
+}
+
+.input-container > input {
+  width: 100%;
 }
 
 .login-buttons-container {
